# python-teacher

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __init__.py  loadInfo.py  main.py  pyproject.toml  python_teacher.py  setup.py
.github/workflows/: Publish to Pip  publish-to-pip.yaml
lessons/: __init__.py  lesson.py  no1.py  no2.py
