[tool.poetry]
name = "python-teacher"
version = "1.1.2"
description = "A command line program to teach you python."
authors = ["Master Coder 1323 <sparlevi18@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core", 'rich']
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python-teacher = "python_teacher:start"
